# AWS_Sample_Repo

./: .gitignore  README.md  config.py  pyproject.toml
.github/workflows/: pipeline
