[project]
name = "project_name"
version = "0.1.0"
description = "packages to be installed and versions"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "boto3==1.34.158",
    "pre-commit>=4.2.0",
    "requests==2.32.3",

]

[dependency-groups]
dev = [
    "moto==5.0.12",
    "pytest>=8.3.2",
    "pytest-cov==5.0.0",
    "requests-mock>=1.12.1",
]
